FoodSpawning set up, need to fix food not deleting.

--- a/AIE_Starter/AIE_Starter.vcxproj
+++ b/AIE_Starter/AIE_Starter.vcxproj
@@ -149,6 +149,8 @@
     <ClCompile Include="FiniteStateMachine.cpp" />
     <ClCompile Include="FollowBehaviour.cpp" />
     <ClCompile Include="Food.cpp" />
+    <ClCompile Include="FoodSpawner.cpp" />
+    <ClCompile Include="FoodTracker.cpp" />
     <ClCompile Include="GoToPointBehaviour.cpp" />
     <ClCompile Include="PathAgent.cpp" />
     <ClCompile Include="AIE_Starter.cpp" />
@@ -172,6 +174,8 @@
     <ClInclude Include="FiniteStateMachine.h" />
     <ClInclude Include="FollowBehaviour.h" />
     <ClInclude Include="Food.h" />
+    <ClInclude Include="FoodSpawner.h" />
+    <ClInclude Include="FoodTracker.h" />
     <ClInclude Include="GoToPointBehaviour.h" />
     <ClInclude Include="PathAgent.h" />
     <ClInclude Include="NodeMap.h" />
