--- a/AIE_Starter/AIE_Starter.vcxproj
+++ b/AIE_Starter/AIE_Starter.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="GoToFoodBehaviour.cpp" />
     <ClCompile Include="GoToPointBehaviour.cpp" />
     <ClCompile Include="LostTargetCondition.cpp" />
+    <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="PathAgent.cpp" />
     <ClCompile Include="AIE_Starter.cpp" />
     <ClCompile Include="NodeMap.cpp" />
@@ -188,9 +189,11 @@
     <ClInclude Include="FoodSpawner.h" />
     <ClInclude Include="FoodTracker.h" />
     <ClInclude Include="GameManager.h" />
+    <ClInclude Include="GameState.h" />
     <ClInclude Include="GoToFoodBehaviour.h" />
     <ClInclude Include="GoToPointBehaviour.h" />
     <ClInclude Include="LostTargetCondition.h" />
+    <ClInclude Include="MainMenu.h" />
     <ClInclude Include="PathAgent.h" />
     <ClInclude Include="NodeMap.h" />
     <ClInclude Include="Pathfinding.h" />
