Game loop created.

--- a/AIE_Starter/AIE_Starter.vcxproj
+++ b/AIE_Starter/AIE_Starter.vcxproj
@@ -177,6 +177,7 @@
     <ClInclude Include="Agent.h" />
     <ClInclude Include="AgentDrawer.h" />
     <ClInclude Include="Behaviour.h" />
+    <ClInclude Include="Button.h" />
     <ClInclude Include="CollisionTracker.h" />
     <ClInclude Include="Condition.h" />
     <ClInclude Include="Decision.h" />
